--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,6 @@ body {
   margin: 0px;
   padding: 0;
 
-}
-
-body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
@@ -13,9 +10,9 @@ header {
   /* height: 360px; */
   z-index: 10;
 }
-.header-banner {
+.mainContainer {
   background-color: #333;
-  background-image: url('https://www.lavanguardia.com/r/GODO/LV/p3/WebSite/2016/02/19/Recortada/LV_20150708_LV_FOTOS_D_54433295432-572-kkbH-U302280868858ZnH-992x558@LaVanguardia-Web.jpg');
+  background-image: url('../src/vacas.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -23,7 +20,7 @@ header {
   height: 300px;
 }
 h1 {
-  font-family: @main-font;
+  color: #43A047;
   font-weight: 700;
   text-transform: uppercase;
 }
@@ -39,18 +36,25 @@ h1 {
 .mainContainer {
   background-color: #333;
   height: 100vh;
-  opacity: 0.5;
+  /* opacity: 0.5; */
 }
 main {
   flex: 1 0 auto;
 }
 nav {
   background-color: #073805;
+  position: fixed;
+  border-radius: 10px;
+  top: 30px;
+  
+  margin-left: 10%;
+  margin-right: 10%;
+  width: 80%;
+  
 }
 
 .page-footer{
-  position: fixed;
-  bottom: 0;
+ 
   width: 100%;
   padding: 0px;
   background-color: #073805;
