--- a/src/index.css
+++ b/src/index.css
@@ -10,19 +10,52 @@ header {
   /* height: 360px; */
   z-index: 10;
 }
+.card {
+  background-image: url('../src/vacas.jpg');
+
+}
+.card.small {
+  /* height: 250; */
+  /* width: 33%; */
+  margin: 30px;
+}
+ul {
+  display: flex;
+  flex-direction: row;
+}
 .mainContainer {
   background-color: #333;
   background-image: url('../src/vacas.jpg');
-  background-position: center;
+  background-position: center ;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 300px;
+  height: 100%;
+}
+.CommonContainer{
+  /* margin-top: 20px; */
+  padding-top: 160px;
+  padding: 100px;
+  width: 100%;
+  height: 600px;
+  border: solid black 3px;
+
+}
+.banner {
+  background-color: rgb(15, 131, 25);
+  height: 230px;
+  width: 100%;
+  padding: 30px;
+}
+.bannerTitle {
+  color:white;
+  font-weight: 300 bold;
 }
 h1 {
   color: #43A047;
   font-weight: 700;
   text-transform: uppercase;
+  padding: 20px;
 }
 
 .fixed-header {
@@ -81,8 +114,8 @@ nav {
   font-size: 12px;
   line-height: 30px;
   color: #777;
-  background: #4CAF50; */
-/* } */
+  background: #4CAF50; 
+} */
 
 .container {
   max-width: 400px;
@@ -180,8 +213,10 @@ fieldset {
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
 }
 
-.copyright {
+
+.page-footer{
   text-align: center;
+
 }
 
 #contact input:focus,
