--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,31 @@ body {
   flex-direction: column;
 }
 header {
-  /* height: 360px; */
   z-index: 10;
+}
+.navTitle {
+  padding-left: 10px;
+  font-size: 35px;
+  color:  #d67829;
+  
+}
+.navSubTitle{
+  font-size: 35px;
+  color: white;
+  
+  
+}
+.containerLogo {
+  background-color: pink;
+  height: 60px;
+  width: 60px;
+  border-radius: 100px;
+}
+.logo{
+  text-align: center;
+  height: 40px;
+  width: 40px;
+  border-radius: solid black 30px;
 }
 .card {
   background-image: url('../src/vacas.jpg');
@@ -30,19 +53,19 @@ ul {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 100%;
+  height: 50vh;
 }
 .CommonContainer{
   /* margin-top: 20px; */
   padding-top: 160px;
   padding: 100px;
   width: 100%;
-  height: 600px;
+  height: 300px;
   border: solid black 3px;
 
 }
 .banner {
-  background-color: rgb(15, 131, 25);
+  background-color: #d67829;
   height: 230px;
   width: 100%;
   padding: 30px;
@@ -121,7 +144,7 @@ nav {
   max-width: 400px;
   width: 100%;
   margin: 0 auto;
-  position: relative;
+  /* position: relative; */
 }
 
 #contact input[type="text"],
@@ -161,6 +184,11 @@ fieldset {
   padding: 0;
   width: 100%;
 }
+.bannerForm{
+  background-color: orange;
+  height: 400px;
+  width: 300px;
+}
 
 #contact input[type="text"],
 #contact input[type="email"],
@@ -171,7 +199,7 @@ fieldset {
   border: 1px solid #ccc;
   background: #FFF;
   margin: 0 0 5px;
-  padding: 10px;
+  /* padding: 10px; */
 }
 
 #contact input[type="text"]:hover,
