--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,10 @@ header {
 }
 .navTitle {
   padding-left: 10px;
+  padding-right: 8px;
   font-size: 35px;
   color:  #d67829;
+  /* margin-right: 0.5%; */
   
 }
 .navSubTitle{
@@ -22,16 +24,25 @@ header {
   
 }
 .containerLogo {
-  background-color: pink;
-  height: 60px;
-  width: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  height: 50px;
+  width: 50px;
   border-radius: 100px;
+  /* margin: 0.5% */
 }
 .logo{
+  position: absolute;
   text-align: center;
-  height: 40px;
-  width: 40px;
-  border-radius: solid black 30px;
+  height: 35px;
+  width: 35px;
+  /* border-radius: solid black 30px; */
+}
+nav .brand-logo {
+  display: flex;
+  margin: 0.6%;
 }
 .card {
   background-image: url('../src/vacas.jpg');
