--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
 }
 header {
   z-index: 10;
+  width: 100vh;
 }
 .navTitle {
   padding-left: 10px;
@@ -34,7 +35,7 @@ header {
   /* margin: 0.5% */
 }
 .logo{
-  position: absolute;
+  /* position: absolute; */
   text-align: center;
   height: 35px;
   width: 35px;
@@ -54,24 +55,26 @@ nav .brand-logo {
   margin: 30px;
 }
 ul {
+  /* padding-left: 39%; */
   display: flex;
   flex-direction: row;
 }
 .mainContainer {
-  background-color: #333;
+  background-color: black;
   background-image: url('../src/vacas.jpg');
   background-position: center ;
   background-repeat: no-repeat;
   background-size: cover;
-  width: 100%;
-  height: 50vh;
+  width: 100vw;
+  
 }
 .CommonContainer{
   /* margin-top: 20px; */
   padding-top: 160px;
   padding: 100px;
   width: 100%;
-  height: 300px;
+  /* height: 100vh; */
+  /* height: 3; */
   border: solid black 3px;
 
 }
@@ -108,17 +111,34 @@ h1 {
 main {
   flex: 1 0 auto;
 }
+.nav-wrapper{
+  width: 100%;
+}
 nav {
+  
   background-color: #073805;
   position: fixed;
   border-radius: 10px;
   top: 30px;
+  /* padding-left: 39%; */
   
   margin-left: 10%;
   margin-right: 10%;
   width: 80%;
   
 }
+.navScroll {
+  background-color: #073805;
+  opacity: 0.7;
+  margin:0px;
+  border: red solid 3px;
+  position: fixed;
+  top: 0px;
+  width: 100vw;
+  padding: 0px 170px;
+  
+}
+
 
 .page-footer{
  
