--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,6 @@ nav .brand-logo {
   margin: 30px;
 }
 ul {
-  /* padding-left: 39%; */
   display: flex;
   flex-direction: row;
 }
@@ -121,8 +120,6 @@ nav {
   position: fixed;
   border-radius: 10px;
   top: 30px;
-  /* padding-left: 39%; */
-  
   margin-left: 10%;
   margin-right: 10%;
   width: 80%;
@@ -132,17 +129,17 @@ nav {
   background-color: #073805;
   opacity: 0.7;
   margin:0px;
-  border: red solid 3px;
+  border-radius: 0px;
+  /* border: red solid 3px; */
   position: fixed;
   top: 0px;
-  width: 100vw;
+  width: 100%;
   padding: 0px 170px;
   
 }
 
 
 .page-footer{
- 
   width: 100%;
   padding: 0px;
   background-color: #073805;
