--- a/src/index.css
+++ b/src/index.css
@@ -28,16 +28,16 @@ header {
   justify-content: center;
   align-items: center;
   background-color: white;
-  height: 50px;
-  width: 50px;
+  height: 45px;
+  width: 45px;
   border-radius: 100px;
   /* margin: 0.5% */
 }
 .logo{
   /* position: absolute; */
   text-align: center;
-  height: 35px;
-  width: 35px;
+  height: 30px;
+  width: 30px;
   /* border-radius: solid black 30px; */
 }
 nav .brand-logo {
@@ -61,7 +61,7 @@ ul {
   background-position: center ;
   background-repeat: no-repeat;
   background-size: cover;
-  width: 100vw;
+  /* width: 100vw; */
   
 }
 .CommonContainer{
@@ -117,7 +117,7 @@ nav {
   top: 30px;
   margin-left: 10%;
   margin-right: 10%;
-  width: 80%;
+  width: 85%;
   
 }
 .navScroll {
@@ -135,7 +135,7 @@ nav {
 
 
 .page-footer{
-  height: 8vh;
+  min-height: 8vh;
   width: 100%;
   padding: 0px;
   background-color: #073805;
@@ -165,12 +165,6 @@ nav {
   background: #4CAF50; 
 } */
 
-.container {
-  max-width: 400px;
-  width: 100%;
-  margin: 0 auto;
-  /* position: relative; */
-}
 
 #contact input[type="text"],
 #contact input[type="email"],
@@ -269,7 +263,12 @@ fieldset {
 
 .page-footer{
   text-align: center;
+  width: 100%;
+  margin: 0 auto;
 
+}
+.container {
+  min-height: 100vh;
 }
 
 #contact input:focus,
@@ -292,4 +291,33 @@ fieldset {
 
 :-ms-input-placeholder {
   color: #888;
+}
+
+.builts {
+  /* padding: 0% !important; */
+}
+
+.border {
+  border: pink 3px solid !important;
+}
+
+
+.dropDown{ 
+  background-color: #073805;
+  color: white;
+}
+.title {
+  color: black;
+  font-weight: 300;
+  /* padding: 40px; */
+}
+
+.subTitle {
+  color:black;
+}
+.pContainer {
+  line-height: 1.7;
+}
+.ulContainer {
+  display: flex;
 }
