--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   flex-direction: column;
 }
 header {
-  z-index: 10;
+  /* z-index: 10; */
   width: 100vh;
 }
 .navTitle {
@@ -91,7 +91,7 @@ h1 {
 
 .fixed-header {
   position: fixed;
-  top: 0;
+  top: 60px;
   left: 0;
   width: 100%; 
 }
@@ -293,12 +293,10 @@ fieldset {
   color: #888;
 }
 
-.builts {
-  /* padding: 0% !important; */
-}
 
-.border {
+.borderbane {
   border: pink 3px solid !important;
+  background-color: #073805 !important;
 }
 
 
@@ -320,4 +318,12 @@ fieldset {
 }
 .ulContainer {
   display: flex;
+}
+
+.carousel  {
+  background-color: aliceblue !important;
+}
+.black  {
+  background-color: black!important;
+  color: #4CAF50 !important;
 }
