--- a/src/index.css
+++ b/src/index.css
@@ -115,22 +115,20 @@ nav {
   position: fixed;
   border-radius: 10px;
   top: 30px;
-  margin-left: 10%;
-  margin-right: 10%;
-  width: 85%;
+  margin-left: 7%;
+  margin-right: 7%;
+  width: 86%;
   
 }
 .navScroll {
   background-color: #073805;
-  opacity: 0.7;
+  opacity: 0.8;
   margin:0px;
   border-radius: 0px;
-  /* border: red solid 3px; */
+  padding: 0px 60px;
   position: fixed;
   top: 0px;
-  width: 100%;
-  padding: 0px 170px;
-  
+  width: 100%; 
 }
 
 
@@ -214,11 +212,11 @@ fieldset {
 #contact input[type="tel"],
 #contact input[type="url"],
 #contact textarea {
-  width: 100%;
+  width: 95%;
   border: 1px solid #ccc;
   background: #FFF;
   margin: 0 0 5px;
-  /* padding: 10px; */
+  padding:0px 10px;
 }
 
 #contact input[type="text"]:hover,
@@ -326,4 +324,7 @@ fieldset {
 .black  {
   background-color: black!important;
   color: #4CAF50 !important;
+}
+.input {
+  padding: 0px 10px !important
 }
