--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@ nav .brand-logo {
   padding: 100px;
   width: 100%;
   height: 92vh;
-  width: 100vw;
+  width: 100%;
   /* border: solid black 3px; */
 
 }
@@ -135,6 +135,7 @@ nav {
   background-color: #073805;
   opacity: 0.8;
   margin:0px;
+  
   border-radius: 0px;
   padding: 0px 60px;
   position: fixed;
@@ -150,7 +151,7 @@ nav {
   position: fixed;
   bottom: 0px;
   min-height: 8vh;
-  width: 100%;
+  max-width: 100% !important;
   padding: 0px;
   margin-top: 10px !important;
   background-color: #073805;
